--- a/0x00-html_advanced/12-index.html
+++ b/0x00-html_advanced/12-index.html
@@ -52,17 +52,20 @@
             <h2>About Us</h2>
             <p>Everything about us</p>
             <h3>Who are we</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque
                 accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime
                 cum!
             </p>
             <h3>Our culture</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque
                 accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime
                 cum!
             </p>
             <h3>How we work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque
                 accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime
                 cum!
             </p>
@@ -72,8 +75,10 @@
             <article>
                 <p>Career</p>
                 <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
-                    modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
+                    modo? At eum nihili facit; Quae contraria sunt his, malane?
+                </p>
             </article>
             <article>
                 <p>Digital Life</p>
@@ -87,9 +92,11 @@
             <article>
                 <p>Social</p>
                 <h3>Bestiarum vero nullum iudicium puto.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo
                     praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria;
-                    Apparet statim, quae sint officia, quae actiones.</p>
+                    Apparet statim, quae sint officia, quae actiones.
+                </p>
             </article>
         </section>
         <section>
@@ -108,8 +115,10 @@
         <section>
             <h2>Contact</h2>
             <p>We like to know new people</p>
-            <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At
-                eum nihili facit; Quae contraria sunt his, malane?</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At
+                eum nihili facit; Quae contraria sunt his, malane?
+            </p>
         </section>
     </main>
     <footer>
