--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -153,13 +153,13 @@
                 <div>
 
                     <article>
-                        Testimonial #1
+                        Testimonial 1
                     </article>
                     <article>
-                        Testimonial #2
+                        Testimonial 2
                     </article>
                     <article>
-                        Testimonial #3
+                        Testimonial 3
                     </article>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                 </header>
                 <div>
 
-                    <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
                         modo?
                         At
                         eum nihili facit; Quae contraria sunt his, malane?</p>
