--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <br> <!-- Header -->
+
+    <!-- Header -->
     <header>
         <div>
             <span>Techium</span>
@@ -22,21 +23,21 @@
             </nav>
         </div>
     </header>
-    <br> <!-- Main -->
+    <!-- Main -->
     <main>
         <h1>
             Homepage
         </h1>
-        <br> <!-- Hero section -->
+        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
-        <br> <!-- Services section -->
+        <!-- Services section -->
         <section>
             <div>
-                <br> <!-- Header -->
+                <!-- Header -->
                 <header>
                     <h2>Services</h2>
                     <p>We work with you</p>
@@ -51,10 +52,10 @@
                 </div>
             </div>
         </section>
-        <br> <!-- Works section -->
+        <!-- Works section -->
         <section>
             <div>
-                <br> <!-- Header -->
+                <!-- Header -->
                 <header>
 
                     <h2>Works</h2>
@@ -74,10 +75,10 @@
                 </div>
             </div>
         </section>
-        <br> <!-- About Us section -->
+        <!-- About Us section -->
         <section>
             <div>
-                <br> <!-- Header -->
+                <!-- Header -->
                 <header>
 
                     <h2>About Us</h2>
@@ -112,10 +113,10 @@
                 </div>
             </div>
         </section>
-        <br> <!-- Latest news section -->
+        <!-- Latest news section -->
         <section>
             <div>
-                <br> <!-- Header -->
+                <!-- Header -->
                 <header>
 
                     <h2>Latest news</h2>
@@ -152,10 +153,10 @@
                 </div>
             </div>
         </section>
-        <br> <!-- Testimonials section -->
+        <!-- Testimonials section -->
         <section>
             <div>
-                <br> <!-- Header -->
+                <!-- Header -->
                 <header>
 
                     <h2>Testimonials</h2>
@@ -164,28 +165,28 @@
                 <div>
 
                     <article>
-                        Testimonial #1
+                        Testimonial 1
                     </article>
                     <article>
-                        Testimonial #2
+                        Testimonial 2
                     </article>
                     <article>
-                        Testimonial #3
+                        Testimonial 3
                     </article>
                 </div>
             </div>
         </section>
-        <br> <!-- Contact section -->
+        <!-- Contact section -->
         <section>
             <div>
-                <br> <!-- Header -->
+                <!-- Header -->
                 <header>
                     <h2>Contact</h2>
                     <p>We like to know new people</p>
                 </header>
                 <div>
 
-                    <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
                         modo?
                         At
                         eum nihili facit; Quae contraria sunt his, malane?</p>
@@ -193,7 +194,7 @@
             </div>
         </section>
     </main>
-    <br> <!-- Footer -->
+    <!-- Footer -->
     <footer>
         <div>
             Footer
