--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -18,12 +18,14 @@
     <header>
         <div>
 
-            <a href="/">
-                <span>
-                    Techium
-                </span>
-            </a>
-            
+            <div>
+                <a href="/">
+                    <span>
+                        Techium
+                    </span>
+                </a>
+            </div>
+
             <nav>
 
             </nav>
