--- a/0x00-html_advanced/about.html
+++ b/0x00-html_advanced/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>
-        About
+        About - Techium
     </title>
     <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -34,7 +34,7 @@
     <!-- Main -->
     <main>
         <h1>
-            Homepage
+            About
         </h1>
         <!-- Hero section -->
         <section>
