--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -183,7 +183,7 @@
                 <div>
 
                     <article>
-                        <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
+                        <blockquote>I am completely blown away. Thanks to Techium, wse've just launched our 5th website!</blockquote>
                         <cite>Yuri Y.</cite>
                     </article>
                     <article>
