--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -183,8 +183,8 @@
                 <div>
 
                     <article>
-                        <blockquote>I am completely blown away. Thanks to Techium, wse've just launched our 5th website!</blockquote>
-                        <cite>Yuri Y.</cite>
+                        <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
+                        <cite>Yursi Y.</cite>
                     </article>
                     <article>
                         <blockquote>Thank you so much for your help. Techium company is awesome!</blockquote>
