--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -190,6 +190,7 @@
                             Yuri Y.
                         </cite>
                     </article>
+                    <article>
                         <blockquote>
                             Thank you so much for your help. Techium company is awesome!
                         </blockquote>
