--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -187,7 +187,7 @@
                             I am completely blown away. Thanks to Techium, we've just launched our 5th website!
                         </blockquote>
                         <cite>
-                            Yuri Y.
+                            - Yuri Y.
                         </cite>
                     </article>
                     <article>
@@ -195,7 +195,7 @@
                             Thank you so much for your help. Techium company is awesome!
                         </blockquote>
                         <cite>
-                            Dorrie S.
+                            - Dorrie S.
                         </cite>
                     </article>
                     <article>
@@ -203,7 +203,7 @@
                             I love your system. Definitely worth the investment. I'd be lost without Techium company.
                         </blockquote>
                         <cite>
-                            Sven H.
+                            - Sven H.
                         </cite>
                     </article>
                 </div>
